add render goods

--- a/goods.html
+++ b/goods.html
@@ -17,6 +17,9 @@
 	<link rel="stylesheet" href="css/bootstrap-grid.min.css">
 	<!-- <link rel="stylesheet" href="css/swiper-bundle.min.css" /> -->
 	<link rel="stylesheet" href="css/style.css">
+	<script src="/js/cart.js" defer></script>
+	<script src="/js/search.js" defer></script>
+	<script src="/js/getGoods.js" defer></script>
 </head>
 <!-- class="show-goods" -->
 
@@ -54,7 +57,7 @@
 				</nav>
 			</div>
 			<div class="col-lg-2 d-none d-lg-block">
-				<div class="form-control">
+				<div class="form-control search-block">
 					<input type="text" class="form-control" placeholder="Search" aria-label="Recipient's username"
 						aria-describedby="button-addon2">
 					<button class="btn btn-outline-secondary" type="button" id="button-addon2">
